src/objects/BT_CO_CMIS_POP_ImportVendorRouteInfo__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dropPoint__c</fullName>
        <label>dropPoint</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationCode__c</fullName>
        <label>publicationCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>routeSystem__c</fullName>
        <label>routeSystem</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>route__c</fullName>
        <label>route</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>variedFixed__c</fullName>
        <label>variedFixed</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorId__c</fullName>
        <label>vendorId</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_CMIS_POP_ImportVendorRouteInfo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BT_CO_CMIS-POP_ImportVendorRouteInfoName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_CMIS_POP_ImportVendorRouteInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>